fix on mobile

--- a/components/auth/Register.module.scss
+++ b/components/auth/Register.module.scss
@@ -48,12 +48,12 @@
 	.container {
 		@include noselect;
 		display: flex;
-		justify-content: center;
 		flex-direction: column;
 		width: 100vw;
 		height: 100vh;
 		padding: 32px;
 		background-color: $dark;
+		overflow-y: auto;
 
 		.header {
 			text-align: center;
@@ -104,9 +104,10 @@
 					display: flex;
 					align-items: center;
 					height: 40px;
-					width: 132px;
+					width: 140px;
+					margin-right: 8px;
 					padding-left: 12px;
-					font-size: 1.6rem;
+					font-size: 1.4rem;
 					font-weight: 300;
 					border: 1px solid $black;
 					border-radius: 5px;
@@ -114,18 +115,23 @@
 					transition: 0.2s border ease-in-out;
 					cursor: pointer;
 
+					&:nth-last-child(1) {
+						margin-right: 0;
+					}
+
 					.list {
 						z-index: 0;
 						position: absolute;
 						bottom: 38px;
 						left: -1px;
 						height: 200px;
-						width: 132px;
+						width: calc(100% + 2px);
 						border: 1px solid black;
 						border-radius: 5px;
 						background-color: $darker;
 						list-style: none;
-						overflow-y: scroll;
+						overflow-y: auto;
+						overflow-x: hidden;
 
 						.item {
 							display: flex;
@@ -257,6 +263,7 @@
 	.position {
 		.container {
 			@include drop;
+			justify-content: center;
 			position: relative;
 			width: 480px;
 			height: fit-content;
