--- a/components/home/Home.module.scss
+++ b/components/home/Home.module.scss
@@ -73,7 +73,7 @@
 
 		.list {
 			list-style: none;
-			margin: 32px 8px 8px;
+			margin: 16px 8px 8px;
 			padding: 16px;
 			border-radius: 5px;
 			background-color: #2e3440;
